Network/Ingress/templates/Network.yaml

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
    name: network-awx-policy
    namespace: external-istiod

spec:
  selector:
    matchLabels:
      istio: ingressgateway

  action: CUSTOM

  provider:
    name: 'authentik'

  rules:
    - to:
        - operation:
            hosts:
              # You can create a single resource and list all Domain names here, or create multiple resources
              - awx.int.mylogin.space
